(ocamllex lexer)

(menhir
 (modules parser))

(executable
  (name docaml)
  (public_name docaml)
  (modules_without_implementation aST aSTpp)
  (libraries unix str))

(install
  (section share)
  (files (../resources/doc.css as doc.css)
         (../resources/doc.js as doc.js)
         (../resources/highlight.pack.js as highlight.pack.js)
         (../resources/monokai.css as monokai.css)
         (../resources/tipuesearch/tipuesearch_set.js as tipuesearch/tipuesearch_set.js)
         (../resources/tipuesearch/tipuesearch.css as tipuesearch/tipuesearch.css)
         (../resources/tipuesearch/tipuesearch.js as tipuesearch/tipuesearch.js)
         (../resources/tipuesearch/tipuesearch.min.js as tipuesearch/tipuesearch.min.js)))
